# GPU-Guard

./: .gitignore  Cargo.toml  README.md  config.example.toml
src/: bot.rs  cli.rs  config.rs  gpu.rs  main.rs  monitor.rs  notifier.rs  task_manager.rs  telegram.rs
