[package]
name = "gpu-guard"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
hostname = "0.4"
serde_json = "1"
reedline = "0.38"
nu-ansi-term = "0.50"
tracing-appender = "0.2"
dirs = "6"
